--- a/sd-video-converter/docker-compose.yml
+++ b/sd-video-converter/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - KAFKA_MESSAGE_MAX_BYTES=25000000
     volumes:
       - ./kafka:/var/lib/kafka/data
+    command: kafka-topics --create --bootstrap-server localhost:9092 --replication-factor 1 --partitions 1 --topic video-topic
     depends_on:
       - zookeeper
 
