--- a/sd-video-converter/docker-compose.yml
+++ b/sd-video-converter/docker-compose.yml
@@ -1,5 +1,34 @@
 version: '3'
 services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "22181:2181"
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - "29092:29092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CREATE_TOPICS: "video-topic:1:1"
+
+  kafka-init:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - kafka
+    command: "bash -c 'until echo Waiting for Kafka to be ready... && nc -zv kafka 9092; do sleep 1; done && kafka-topics --create --topic video-topic --partitions 1 --replication-factor 1 --if-not-exists --bootstrap-server kafka:9092'"
+
   web:
     build:
       context: ./web
@@ -10,32 +39,6 @@ services:
     depends_on:
       - kafka
 
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    ports:
-      - 2181:2181
-    environment:
-      - ZOOKEEPER_CLIENT_PORT=2181
-      - ZOOKEEPER_TICK_TIME=2000
-    volumes:
-      - ./zookeeper:/var/lib/zookeeper/data
-
-  kafka:
-    image: confluentinc/cp-kafka:latest
-    container_name: kafka
-    ports:
-      - 9092:9092
-    environment:
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_MESSAGE_MAX_BYTES=25000000
-    volumes:
-      - ./kafka:/var/lib/kafka/data
-    command: kafka-topics --create --bootstrap-server localhost:9092 --replication-factor 1 --partitions 1 --topic video-topic
-    depends_on:
-      - zookeeper
-
   video-conversion:
     build:
       context: ./video
@@ -45,7 +48,5 @@ services:
       - kafka
 
 volumes:
-  kafka:
-  zookeeper:
   web:
   video:
