tudo funfando (pelo menos na minha maquina)

--- a/sd-video-converter/video/Dockerfile
+++ b/sd-video-converter/video/Dockerfile
@@ -4,6 +4,7 @@ RUN apk update && apk add --no-cache ffmpeg
 
 WORKDIR /app
 
-RUN npm install --production
+COPY package*.json ./
+RUN npm install
 
 CMD ["node", "video-conversion.js"]
