--- a/sd-video-converter/docker-compose.yml
+++ b/sd-video-converter/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - 3000:3000
     volumes:
       - ./web:/app
+      - /app/node_modules
     depends_on:
       - kafka
 
@@ -44,6 +45,7 @@ services:
       context: ./video
     volumes:
       - ./video:/app
+      - /app/node_modules
     depends_on:
       - kafka
 
