o minio definitivamente nçao funciona com node

--- a/sd-video-converter/.env
+++ b/sd-video-converter/.env
@@ -1,2 +1,6 @@
 MINIO_ROOT_USER=root
 MINIO_ROOT_PASSWORD=12345678
+MINIO_SERVER_URL=http://localhost:9000
+KAFKA_HOST=kafka:9092
+KAFKA_TOPIC=video-topic
+MINIO_INPUT_BUCKET=input-bucket
