--- a/sd-video-converter/video/package.json
+++ b/sd-video-converter/video/package.json
@@ -4,10 +4,13 @@
     "description": "Conversão de vídeo usando Kafka",
     "main": "video-conversion.js",
     "scripts": {
-        "start": "node video-conversion.js"
+        "start": "node video-conversion.js",
+        "browserify": "npm run"
     },
     "dependencies": {
         "kafka-node": "^5.0.0",
+        "minio": "^7.1.0",
         "nodemailer": "^6.6.3"
+        
     }
 }
