--- a/sd-video-converter/web/package.json
+++ b/sd-video-converter/web/package.json
@@ -8,8 +8,10 @@
     },
     "dependencies": {
         "body-parser": "^1.20.2",
+        "dotenv": "^16.0.3",
         "express": "^4.17.1",
         "kafka-node": "^5.0.0",
+        "minio": "^7.1.0",
         "multer": "^1.4.5-lts.1"
     }
 }
